tests/baselines/reference/dynamicImportDeferInvalidStandalone.errors.txt
b.ts(1,13): error TS1005: '(' expected.
b.ts(3,14): error TS1005: '(' expected.


==== b.ts (2 errors) ====
    import.defer;
                ~
!!! error TS1005: '(' expected.
    
    (import.defer)("a");
                 ~
!!! error TS1005: '(' expected.
    